# Notium

./: .gitignore  pyproject.toml  readme.md
Core/Notium/core/: auth.py
Core/Notium/notes/: api.py  models.py
Core/Notium/notium/: settings.py
Notium-BE/: pyproject.toml
Notium-BE/notium/: asgi.py  settings.py
UI/: package-lock.json  package.json  rsbuild.config.ts
UI/src/: App.tsx
UI/src/api/: auth.ts  client.ts  notes.ts
UI/src/auth/: AuthContext.tsx
UI/src/components/: Navbar.tsx  NoteCard.tsx  NoteForm.tsx  Skeleton.tsx  Tag.tsx
UI/src/hooks/: use-auth.ts
UI/src/pages/: Login.tsx  NotFound.tsx  NoteEditor.tsx  Notes.tsx  SignUp.tsx
UI/src/router/: index.tsx
notium/: manage.py
notium/notes/: admin.py  schemas.py  services.py
notium/notes/migrations/: 0001_initial.py
notium/notium/: settings.py  urls.py  wsgi.py
